// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azurerm 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "azurerm",
        "config": {
          "client_id": "ARM_CLIENT_ID",
          "client_secret": "ARM_CLIENT_SECRET",
          "container_name": "tfstate",
          "endpoint": "ARM_ENDPOINT",
          "environment": "public",
          "key": "prod.terraform.tfstate",
          "resource_group_name": "StorageAccount-ResourceGroup",
          "storage_account_name": "abcd1234"
        }
      }
    }
  }
}"
`;

exports[`consul 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "consul",
        "config": {
          "access_token": "CONSUL_HTTP_TOKEN",
          "address": "demo.consul.io",
          "ca_file": "CONSUL_CACERT",
          "cert_file": "CONSUL_CLIENT_CERT",
          "datacenter": "agent",
          "gzip": true,
          "http_auth": "CONSUL_HTTP_AUTH",
          "key_file": "CONSUL_CLIENT_KEY",
          "lock": true,
          "path": "full/path",
          "scheme": "https"
        }
      }
    }
  }
}"
`;

exports[`cos 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "cos",
        "config": {
          "acl": "private",
          "bucket": "bucket-for-terraform-state-1258798060",
          "encrypt": true,
          "key": "terraform.tfstate",
          "prefix": "terraform/state",
          "region": "ap-guangzhou",
          "secret_id": "TENCENTCLOUD_SECRET_ID",
          "secret_key": "TENCENTCLOUD_SECRET_KEY"
        }
      }
    }
  }
}"
`;

exports[`gcs 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "gcs",
        "config": {
          "access_token": "Authorization: Bearer",
          "bucket": "tf-state-prod",
          "credentials": "GOOGLE_BACKEND_CREDENTIALS",
          "encryption_key": "GOOGLE_ENCRYPTION_KEY",
          "prefix": "terraform/state"
        }
      }
    }
  }
}"
`;

exports[`http 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "http",
        "config": {
          "address": "http://myrest.api.com/foo",
          "lock_address": "http://myrest.api.com/foo",
          "lock_method": "LOCK",
          "password": "HTTP basic auth password",
          "retry_max": 2,
          "retry_wait_max": 30,
          "retry_wait_min": 1,
          "skip_cert_verification": false,
          "unlock_address": "http://myrest.api.com/foo",
          "unlock_method": "UNLOCK",
          "update_method": "POST",
          "username": "HTTP basic auth user"
        }
      }
    }
  }
}"
`;

exports[`local 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "local",
        "config": {
          "path": "relative/path/to/terraform.tfstate",
          "workspace_dir": "local_workspace"
        }
      }
    }
  }
}"
`;

exports[`oss 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "oss",
        "config": {
          "access_key": "ALICLOUD_ACCESS_KEY",
          "acl": "object acl",
          "assume_role": {
            "policy": "restrictive policy",
            "role_arn": "ALICLOUD_ASSUME_ROLE_ARN",
            "session_expiration": 3600,
            "session_name": "ALICLOUD_ASSUME_ROLE_SESSION_NAME"
          },
          "bucket": "bucket-for-terraform-state",
          "ecs_role_name": "RAM Role Name",
          "encrypt": true,
          "endpoint": "ALICLOUD_OSS_ENDPOINT",
          "key": "version-1.tfstate",
          "prefix": "path/mystate",
          "profile": "ALICLOUD_PROFILE",
          "region": "cn-beijing",
          "secret_key": "ALICLOUD_SECRET_KEY",
          "security_token": "ALICLOUD_SECURITY_TOKEN",
          "shared_credentials_file": "ALICLOUD_SHARED_CREDENTIALS_FILE",
          "tablestore_endpoint": "https://terraform-remote.cn-hangzhou.ots.aliyuncs.com",
          "tablestore_table": "statelock"
        }
      }
    }
  }
}"
`;

exports[`pg 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "pg",
        "config": {
          "conn_str": "postgres://user:pass@db.example.com/terraform_backend",
          "schema_name": "terraform_remote_state",
          "skip_schema_creation": true
        }
      }
    }
  }
}"
`;

exports[`remote 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "remote",
        "config": {
          "hostname": "app.terraform.io",
          "organization": "company",
          "workspaces": {
            "name": "my-app-prod"
          }
        }
      }
    }
  }
}"
`;

exports[`s3 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "s3",
        "config": {
          "access_key": "AWS_ACCESS_KEY_ID",
          "acl": "Canned ACL",
          "assume_role_policy": "permissions for assuming role",
          "bucket": "mybucket",
          "dynamodb_endpoint": "AWS_DYNAMODB_ENDPOINT",
          "dynamodb_table": "DynamoDB table",
          "encrypt": true,
          "endpoint": "AWS_S3_ENDPOINT",
          "external_id": "external ID",
          "force_path_style": false,
          "iam_endpoint": "AWS_IAM_ENDPOINT",
          "key": "path/to/my/key",
          "kms_key_id": "ARN of a KMS Key",
          "max_retries": 5,
          "profile": "AWS_PROFILE",
          "region": "us-east-1",
          "role_arn": "role to be assumed",
          "secret_key": "AWS_SECRET_ACCESS_KEY",
          "session_name": "role session name",
          "shared_credentials_file": "~/.aws/credentials",
          "skip_credentials_validation": false,
          "skip_metadata_api_check": true,
          "sse_customer_key": "AWS_SSE_CUSTOMER_KEY",
          "sts_endpoint": "AWS_STS_ENDPOINT",
          "token": "AWS_SESSION_TOKEN",
          "workspace_key_prefix": "env:"
        }
      }
    }
  }
}"
`;

exports[`s3 reference 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "s3",
        "config": {
          "bucket": "mybucket",
          "key": "path/to/my/key"
        }
      }
    }
  },
  "provider": {
    "test": [
      {
      }
    ]
  },
  "resource": {
    "test_resource": {
      "test_resource": {
        "name": "\${data.terraform_remote_state.remote.outputs.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "test": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`s3 with options 1`] = `
"{
  "data": {
    "terraform_remote_state": {
      "remote": {
        "backend": "s3",
        "config": {
          "bucket": "mybucket",
          "key": "path/to/my/key"
        },
        "defaults": {
          "someProp": "some_value"
        },
        "workspace": "my_workspace"
      }
    }
  }
}"
`;
